# banksim

./: .gitignore  Cargo.toml  Dockerfile  README.md  example_config.yaml  local.env  requests  setenv
examples/banksim_django/: manage.py
examples/banksim_django/app1/: requests.py  tasks.py  urls.py  views.py
examples/banksim_django/banksim_django/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  config.ts  env.ts  general_styles.scss  global.d.ts  helpers.ts  index.scss  main.tsx  mock_data.ts  types.ts  variables.scss
frontend/src/Components/: AccountTable.module.scss  AccountTable.tsx  DeleteAccountModalContent.tsx  ErrorModalContent.tsx  MainLayout.tsx  ModalWindow.module.scss  ModalWindow.tsx  NavInfo.tsx  NavLinks.tsx  Navbar.module.scss  Navbar.tsx  NewAccountModalContent.tsx  NewTransactionModalContent.tsx  OpenCreditModalContent.tsx  TableHeader.tsx  TableRow.tsx  TableSkeleton.tsx
frontend/src/Pages/: AboutPage.module.scss  AboutPage.tsx  LogsPage.module.scss  LogsPage.tsx  MainPage.module.scss  MainPage.tsx  NotFoundPage.module.scss  NotFoundPage.tsx  TransactionsPage.module.scss  TransactionsPage.tsx
frontend/src/UI/: ActionButton.module.scss  ActionButton.tsx  CustomCheckbox.module.scss  CustomCheckbox.tsx
frontend/src/hooks/: useAxios.tsx
frontend/src/state/: account_list_slice.ts  account_socket_slice.ts  checked_items_slice.ts  logs_slice.ts  socket_open_slice.ts  store.ts  store_info_slice.ts
migrations/: V1__init_migration.sql
queries/: bank_queries.sql
scripts/: run_banksim  run_banksim_container  run_banksim_container_orbstack  run_pg  run_pg_container  run_pg_container_orbstack  start_banksim_from_scratch  start_banksim_from_scratch_orbstack
secrets/: terminal_password.txt
src/: config.rs  cornucopia.rs  html_gen.rs  interaction_sessions.rs  lib.rs  main.rs  middleware.rs  tasks.rs  ws_tracing_subscriber.rs
src/bank/: backend.rs  memory.rs  mod.rs
src/bank/pg/: db_migration.rs  mod.rs
src/domain/: card_number.rs  mod.rs
src/domain/requests/: system_api.rs
src/domain/responses/: system_api.rs
src/routes/: api.rs  html_pages_and_triggers.rs  mod.rs  system.rs  token.rs
src/routes/session/: init.rs  mod.rs
src/session/: card_token.rs  mod.rs  payment.rs
src/startup/: mod.rs
templates/: card_token_registration_page.html  init_payment_page.html
