[package]
name = "banksim"
version = "0.1.0"
edition = "2021"

[dependencies]
# banksim-api = { path = "../airactions/backends/banksim-api" }
banksim-api = { git = "https://github.com/ghashy/airactions.git" }

# Database-related dependencies
postgres-types = { version = "0.2.6", features = ["derive"] }
tokio-postgres = { version = "0.7.10", features = [
  "with-uuid-1",
  "with-time-0_3",
] }
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
refinery = { version = "0.8.13", features = ["tokio-postgres"] }
cornucopia_async = { git = "https://github.com/cornucopia-rs/cornucopia", rev = "d1229ae" }

# Web-related dependencies
axum = { version = "0.7.5", features = ["macros", "tracing"] }
tower = { version = "0.4.13", features = ["timeout"] }
http = "1.1.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tokio = { version = "1.37.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
] }

fastwebsockets = { version = "0.7.1", features = ["upgrade", "with_axum"] }

# Serialization-related dependencies
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

# Telemetry
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "chrono",
  "registry",
  "env-filter",
] }
tracing-appender = "0.2.3"

# Utility and miscellaneous dependencies
statig = { version = "0.3.0", features = ["async"] }
futures = "0.3.30"
anyhow = "1.0.81"
config = "0.14.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
url = { version = "2.5.0", features = ["serde"] }
time = { version = "0.3.34", features = ["local-offset", "macros", "parsing", "serde", "formatting"] }
thiserror = "1.0.58"
askama = "0.12.1"
rand = { version = "0.8.5", features = ["std_rng"] }
rust_decimal = { version = "1.35.0", features = ["db-postgres"] }


# Security
secrecy = { version = "0.8.0", features = ["serde"] }
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.0"
argon2 = { version = "0.5.3", features = ["std"] }

[dev-dependencies]
rs_merkle = "1.4.2"

[profile.dev.package."*"]
opt-level = 3
debug = false
incremental = true

[profile.dev]
opt-level = 3
debug = false
incremental = true

